footer; spacing scss fixes

--- a/components/_patterns/00-base/global/01-colors/_color-vars.scss
+++ b/components/_patterns/00-base/global/01-colors/_color-vars.scss
@@ -14,9 +14,11 @@ $c-red: hsl(352, 92%, 38%); // Primary Color. Used for links
 $c-blue: #2377ce;
 $c-green: #38653c;
 $c-primary: #38653c;
+$c-primary-light: #148a33;
 $c-secondary-light: #ae1478;
 $c-secondary: #7b0f55;
 $c-secondary-dark: #46002e;
+$c-orange: #e1851a;
 $c-white: white;
 $c-gray--light: hsl(0, 0%, 60%);
 
