--- a/components/_patterns/02-molecules/branding/_branding.scss
+++ b/components/_patterns/02-molecules/branding/_branding.scss
@@ -14,6 +14,6 @@
   &:hover,
   &:focus {
     border-bottom: 7px solid $c-secondary;
-    background-color: $c-primary;
+    background: $c-primary-light;
   }
 }
