--- a/components/_patterns/03-organisms/site/site-header/_site-header.scss
+++ b/components/_patterns/03-organisms/site/site-header/_site-header.scss
@@ -1,5 +1,5 @@
 .header {
-  background-color: $c-green;
+  background-color: $c-primary;
   max-width: 100%;
   margin-bottom: 0;
 
